[tool.poetry]
name = "src"
version = "0.1.0"
description = "CLI application to access dog data from zurich."
authors = ["Musa Rochi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
